# biotic-interaction-trait-architecture

./: README.md  pyproject.toml  ハキリバチ.R
configs/: impatiens_capensis_four_path_models.json
docs/: PARAMETER_ENVELOPE_BRIDGE_PROTOCOL.md  PART_I_ROBUSTNESS_PROTOCOL.md  functional_trait_model_scope.md  global_network_backbone.md  part_i_to_big_data_decision_table.md  public_data_first_feasibility.md  public_data_route_results_20260629.md  sign_stability.md  theory_empirical_identifiability_reassessment.md
examples/: sign_stability_report.py
scripts/: apply_priority_leak_audit_decisions.py  audit_current_regime_discrimination.py  audit_impatiens_four_path_data.py  audit_openalex_retrieval_scope.py  batch_scout_public_sources.py  build_hierarchical_evidence_synthesis.py  build_priority_leak_audit.py  build_priority_leak_audit_abstract_packet.py  bulk_scout_openalex_public_sources.py  extract_impatiens_variable_dictionary.py  harvest_broad_reality_evidence.py  inspect_dalechampia_package_documentation.py  inspect_dryad_dataset_payload.py  inspect_dryad_version_payload.py  inspect_title_validated_dryad_archive_headers.py  probe_bien_wol_leaf_coverage.R  probe_castilleja_source_access.py  probe_dryad_public_dataset.py  rank_broad_public_source_availability.py  resolve_declared_figshare_receipts.py  run_impatiens_four_path_models.py  run_part_i_robustness.py  run_research_pipeline.py  screen_broad_reality_evidence.py  screen_public_matched_evidence.py
tests/: test_batch_scout_public_sources.py  test_broad_abstract_evidence_map.py  test_broad_abstract_label_audit.py  (+27 more)
(+113 files in other folders)
